ghc-6.2/hslibs/win32/Win32File_stub_ffi.h

extern void* prim_getFileAttributes(char * arg1);
extern UINT access_prim_getFileAttributes_res1(HsPtr);
extern int access_prim_getFileAttributes_gc_failed(HsPtr);
extern void* access_prim_getFileAttributes_gc_failstring(HsPtr);
extern void* prim_win32_ReadFile(HANDLE arg1,void * arg2,DWORD arg3,LPOVERLAPPED arg4);
extern DWORD access_prim_win32_ReadFile_res1(HsPtr);
extern int access_prim_win32_ReadFile_gc_failed(HsPtr);
extern void* access_prim_win32_ReadFile_gc_failstring(HsPtr);
extern void* prim_win32_WriteFile(HANDLE arg1,void * arg2,DWORD arg3,LPOVERLAPPED arg4);
extern DWORD access_prim_win32_WriteFile_res1(HsPtr);
extern int access_prim_win32_WriteFile_gc_failed(HsPtr);
extern void* access_prim_win32_WriteFile_gc_failstring(HsPtr);
extern void* prim_findFirstChangeNotification(char * arg1,int arg2,DWORD arg3);
extern HANDLE access_prim_findFirstChangeNotification_res1(HsPtr);
extern int access_prim_findFirstChangeNotification_gc_failed(HsPtr);
extern void* access_prim_findFirstChangeNotification_gc_failstring(HsPtr);
extern void* prim_findNextChangeNotification(HANDLE arg1);
extern int access_prim_findNextChangeNotification_gc_failed(HsPtr);
extern void* access_prim_findNextChangeNotification_gc_failstring(HsPtr);
extern void* prim_findCloseChangeNotification(HANDLE arg1);
extern int access_prim_findCloseChangeNotification_gc_failed(HsPtr);
extern void* access_prim_findCloseChangeNotification_gc_failstring(HsPtr);
extern void* prim_defineDosDevice(DWORD arg1,char * arg2,char * arg3);
extern int access_prim_defineDosDevice_gc_failed(HsPtr);
extern void* access_prim_defineDosDevice_gc_failstring(HsPtr);
extern int prim_areFileApisANSI();
extern void prim_setFileApisToOEM();
extern void prim_setFileApisToANSI();
extern UINT prim_setHandleCount(UINT arg1);
extern void* prim_getLogicalDrives();
extern DWORD access_prim_getLogicalDrives_res1(HsPtr);
extern int access_prim_getLogicalDrives_gc_failed(HsPtr);
extern void* access_prim_getLogicalDrives_gc_failstring(HsPtr);
extern void* prim_getDiskFreeSpace(char * s);
extern DWORD access_prim_getDiskFreeSpace_res1(HsPtr);
extern DWORD access_prim_getDiskFreeSpace_res2(HsPtr);
extern DWORD access_prim_getDiskFreeSpace_res3(HsPtr);
extern DWORD access_prim_getDiskFreeSpace_res4(HsPtr);
extern int access_prim_getDiskFreeSpace_gc_failed(HsPtr);
extern void* access_prim_getDiskFreeSpace_gc_failstring(HsPtr);