ghc-6.2/hslibs/win32/Win32File.hs


getFileAttributes :: String -> IO FileAttributeOrFlag
getFileAttributes gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  prim_getFileAttributes arg1
  >>= \ gc_result ->
  access_prim_getFileAttributes_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getFileAttributes_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getFileAttributes_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_getFileAttributes" prim_getFileAttributes :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getFileAttributes_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getFileAttributes_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getFileAttributes_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Read/write files
----------------------------------------------------------------

-- No support for this yet
--type OVERLAPPED =
-- (DWORD,  -- Offset
--  DWORD,  -- OffsetHigh
--  HANDLE) -- hEvent

type LPOVERLAPPED = Addr

type MbLPOVERLAPPED = Maybe LPOVERLAPPED

--Sigh - I give up & prefix win32_ to the next two to avoid
-- senseless Prelude name clashes. --sof.

win32_ReadFile :: HANDLE -> Addr -> DWORD -> MbLPOVERLAPPED -> IO DWORD
win32_ReadFile arg1 arg2 arg3 arg4 =
  (case arg4 of {
      Nothing -> (return (nullAddr));
      (Just arg4) -> (return ((arg4)))
   }) >>= \ (arg4) ->
  prim_win32_ReadFile arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_win32_ReadFile_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_win32_ReadFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_win32_ReadFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_win32_ReadFile" prim_win32_ReadFile :: Addr -> Addr -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_ReadFile_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_ReadFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_ReadFile_gc_failstring :: Addr -> IO (Addr)

win32_WriteFile :: HANDLE -> Addr -> DWORD -> MbLPOVERLAPPED -> IO DWORD
win32_WriteFile arg1 arg2 arg3 arg4 =
  (case arg4 of {
      Nothing -> (return (nullAddr));
      (Just arg4) -> (return ((arg4)))
   }) >>= \ (arg4) ->
  prim_win32_WriteFile arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_win32_WriteFile_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_win32_WriteFile_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_win32_WriteFile_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_win32_WriteFile" prim_win32_WriteFile :: Addr -> Addr -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_WriteFile_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_WriteFile_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_win32_WriteFile_gc_failstring :: Addr -> IO (Addr)

-- missing Seek functioinality; GSL ???
-- Dont have Word64; ADR
-- %fun SetFilePointer :: HANDLE -> Word64 -> FilePtrDirection -> IO Word64

----------------------------------------------------------------
-- File Notifications
--
-- Use these to initialise, "increment" and close a HANDLE you can wait
-- on.
----------------------------------------------------------------

findFirstChangeNotification :: String -> Bool -> FileNotificationFlag -> IO HANDLE
findFirstChangeNotification gc_arg1 gc_arg2 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg1) ->
  (marshall_bool_ gc_arg2) >>= \ (arg2) ->
  prim_findFirstChangeNotification arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_findFirstChangeNotification_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_findFirstChangeNotification_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_findFirstChangeNotification_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_findFirstChangeNotification" prim_findFirstChangeNotification :: Addr -> Int -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findFirstChangeNotification_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findFirstChangeNotification_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findFirstChangeNotification_gc_failstring :: Addr -> IO (Addr)

findNextChangeNotification :: HANDLE -> IO ()
findNextChangeNotification arg1 =
  prim_findNextChangeNotification arg1
  >>= \ gc_result ->
  access_prim_findNextChangeNotification_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_findNextChangeNotification_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_findNextChangeNotification" prim_findNextChangeNotification :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findNextChangeNotification_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findNextChangeNotification_gc_failstring :: Addr -> IO (Addr)

findCloseChangeNotification :: HANDLE -> IO ()
findCloseChangeNotification arg1 =
  prim_findCloseChangeNotification arg1
  >>= \ gc_result ->
  access_prim_findCloseChangeNotification_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_findCloseChangeNotification_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_findCloseChangeNotification" prim_findCloseChangeNotification :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findCloseChangeNotification_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_findCloseChangeNotification_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- DOS Device flags
----------------------------------------------------------------

defineDosDevice :: DefineDosDeviceFlags -> String -> String -> IO ()
defineDosDevice arg1 gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (marshall_string_ gc_arg2) >>= \ (arg3) ->
  prim_defineDosDevice arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_defineDosDevice_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_defineDosDevice_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_defineDosDevice" prim_defineDosDevice :: Word32 -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_defineDosDevice_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_defineDosDevice_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------

-- These functions are very unusual in the Win32 API:
-- They dont return error codes

areFileApisANSI :: IO Bool
areFileApisANSI =
  prim_areFileApisANSI
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_areFileApisANSI" prim_areFileApisANSI :: IO (Int)
setFileApisToOEM :: IO ()
setFileApisToOEM =
  prim_setFileApisToOEM
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setFileApisToOEM" prim_setFileApisToOEM :: IO ()
setFileApisToANSI :: IO ()
setFileApisToANSI =
  prim_setFileApisToANSI
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setFileApisToANSI" prim_setFileApisToANSI :: IO ()
setHandleCount :: UINT -> IO UINT
setHandleCount arg1 =
  prim_setHandleCount arg1
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_setHandleCount" prim_setHandleCount :: Word32 -> IO (Word32)

----------------------------------------------------------------

getLogicalDrives :: IO DWORD
getLogicalDrives =
  prim_getLogicalDrives
  >>= \ gc_result ->
  access_prim_getLogicalDrives_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getLogicalDrives_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getLogicalDrives_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_getLogicalDrives" prim_getLogicalDrives :: IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getLogicalDrives_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getLogicalDrives_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getLogicalDrives_gc_failstring :: Addr -> IO (Addr)

-- %fun GetDriveType :: MbString -> IO DriveType

getDiskFreeSpace :: MbString -> IO (DWORD,DWORD,DWORD,DWORD)
getDiskFreeSpace gc_arg1 =
  (case gc_arg1 of {
      Nothing -> (return (nullAddr));
      (Just gc_arg1) -> (marshall_string_ gc_arg1) >>= \ (s) ->
			(return ((s)))
   }) >>= \ (s) ->
  prim_getDiskFreeSpace s
  >>= \ gc_result ->
  access_prim_getDiskFreeSpace_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDiskFreeSpace_res2 (gc_result :: Addr) >>= \ res2 ->
  access_prim_getDiskFreeSpace_res3 (gc_result :: Addr) >>= \ res3 ->
  access_prim_getDiskFreeSpace_res4 (gc_result :: Addr) >>= \ res4 ->
  access_prim_getDiskFreeSpace_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDiskFreeSpace_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((res1,res2,res3,res4)))
foreign import  ccall unsafe "Win32File_stub_ffi.h prim_getDiskFreeSpace" prim_getDiskFreeSpace :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_res2 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_res3 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_res4 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32File_stub_ffi.h" access_prim_getDiskFreeSpace_gc_failstring :: Addr -> IO (Addr)
